--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -1,8 +1,8 @@
 .searchInput {
    display: flex;
    align-items: center;
-   justify-content: center;
-   height: 100vh;
+   justify-content: right;
+   padding: 30px;
    
 }
 
